[gd_scene load_steps=2 format=3 uid="uid://cr5js3cuw3b7y"]

[ext_resource type="Script" uid="uid://coaq5bnt4i7s6" path="res://UI/Settings/RangeSettings/range_settings.gd" id="1_btrk3"]

[node name="RangeSettings" type="PanelContainer"]
offset_right = 379.0
offset_bottom = 197.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_btrk3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Units" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2
text = "Units: "

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2
text = "Imperial"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2
text = "Metric"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/Units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CameraFollow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2
text = "Camera
Follow Mode"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2
text = "Off"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2
text = "On"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/CameraFollow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoBallReset" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2
text = "Auto Ball Reset: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2
text = "Off"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2
text = "On"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/AutoBallReset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShotInjector" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2
text = "Shot Injector"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2
text = "Off"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2
text = "On"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/ShotInjector"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BallResetTimer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BallResetTimer"]
layout_mode = 2
text = "Ball Reset Timer: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/BallResetTimer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="ResetSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/BallResetTimer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/BallResetTimer"]
layout_mode = 2
text = "sec"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/BallResetTimer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Temperature" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Temperature"]
layout_mode = 2
text = "Temperature: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/Temperature"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemperatureSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Temperature"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Temperature"]
layout_mode = 2
text = "F"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/Temperature"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Altitude" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Altitude"]
layout_mode = 2
text = "Altitude: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/Altitude"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.7

[node name="AltitudeSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Altitude"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Altitude"]
layout_mode = 2
text = "ft"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/Altitude"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DragScale" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DragScale"]
layout_mode = 2
text = "Drag Scale: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/DragScale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.7

[node name="DragSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/DragScale"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/DragScale"]
layout_mode = 2
text = "x"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/DragScale"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SurfaceType" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SurfaceType"]
layout_mode = 2
text = "Surface: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/SurfaceType"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SurfaceOption" type="OptionButton" parent="MarginContainer/VBoxContainer/SurfaceType"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/SurfaceType"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TracerCount" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TracerCount"]
layout_mode = 2
text = "Shot Tracers: "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/TracerCount"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.4

[node name="TracerCountSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/TracerCount"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/TracerCount"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit to Menu"

[connection signal="toggled" from="MarginContainer/VBoxContainer/Units/CheckButton" to="." method="_on_units_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CameraFollow/CheckButton" to="." method="_on_camer_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/AutoBallReset/CheckButton" to="." method="_on_auto_reset_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ShotInjector/CheckButton" to="." method="_on_injector_check_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/BallResetTimer/ResetSpinBox" to="." method="_on_reset_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Temperature/TemperatureSpinBox" to="." method="_on_temperature_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Altitude/AltitudeSpinBox" to="." method="_on_altitude_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/DragScale/DragSpinBox" to="." method="_on_drag_spin_box_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/SurfaceType/SurfaceOption" to="." method="_on_surface_option_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TracerCount/TracerCountSpinBox" to="." method="_on_tracer_count_spin_box_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
